--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "@formspree/react": "^2.4.1",
+    "i18next": "^23.2.11",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^13.0.2",
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.11.0",
     "react-toastify": "^9.1.2"
